I am having a lot of problem with legacy Closed captions for a while now. This one is even worst since it will either get stuck on one or it will stop. I am attaching the log. Using vlc-3.0.0-git-20150317-1132
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
...
Linked items
0
Link issues together to show that they're related.
Learn more.
commit 93e1d6ad
Author: Thomas Guillem thomas@gllm.fr
Date: Wed Mar 25 15:27:36 2015 +0000
video_output: fix controls and events not processedThis issue is easily reproducible with VDPAU activated, with a 60fps ts file,see [#14199](https://code.videolan.org/videolan/vlc/-/issues/14199).With this sample, The video_output Thread is looping in ThreadDisplayPictureway more often than with other videos. Consequently, vout_ManageWrapper andThreadControl are not called enough. As a result, subtitles are processed toolate, the mouse isn't able to hide/unhide, we can be stuck in fullscreen mode,or second click on video to pop up the menu doesn't work.To fix this issue: don't loop in ThreadDisplayPicture and don't wait invout_control_Pop if a picture was previously displayed.Fixes [#14199](https://code.videolan.org/videolan/vlc/-/issues/14199)Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>