src/video_output/control.c
@@ -177,19 +177,16 @@ void vout_control_PushString(vout_control_t *ctrl, int type, const char *string)
 }
 
 int vout_control_Pop(vout_control_t *ctrl, vout_control_cmd_t *cmd,
-                     mtime_t deadline, mtime_t timeout)
+                     mtime_t deadline)
 {
     vlc_mutex_lock(&ctrl->lock);
     if (ctrl->cmd.i_size <= 0) {
         ctrl->is_processing = false;
         vlc_cond_broadcast(&ctrl->wait_acknowledge);
 
-        const mtime_t max_deadline = mdate() + timeout;
-        const mtime_t wait_deadline = deadline <= VLC_TS_INVALID ? max_deadline : __MIN(deadline, max_deadline);
-
         /* Spurious wakeups are perfectly fine */
-        if (ctrl->can_sleep)
-            vlc_cond_timedwait(&ctrl->wait_request, &ctrl->lock, wait_deadline);
+        if (deadline > VLC_TS_INVALID && ctrl->can_sleep)
+            vlc_cond_timedwait(&ctrl->wait_request, &ctrl->lock, deadline);
     }
 
     bool has_cmd;
