src/video_output/control.h
@@ -130,7 +130,7 @@ void vout_control_PushString(vout_control_t *, int type, const char *string);
 void vout_control_Wake(vout_control_t *);
 
 /* control inside of the vout thread */
-int vout_control_Pop(vout_control_t *, vout_control_cmd_t *, mtime_t deadline, mtime_t timeout);
+int vout_control_Pop(vout_control_t *, vout_control_cmd_t *, mtime_t deadline);
 void vout_control_Dead(vout_control_t *);
 
 #endif
